--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -204,6 +204,7 @@ h4, h5 {
   font-style: italic;
 }
 /* End of Poppins Fonts */
+/* Navigation styling for the header and footer navbars and menus */
 ul,
 li,
 a {
@@ -212,7 +213,15 @@ a {
   list-style: none;
   text-decoration: none;
 }
+ul:hover, ul:focus,
+li:hover,
+li:focus,
+a:hover,
+a:focus {
+  font-weight: 700;
+}
 
+/* General styling for the header */
 #masthead {
   height: 80px;
   position: relative;
@@ -249,70 +258,96 @@ a {
   height: 100%;
 }
 
+/* Navigation styling */
 .main-navigation {
   flex-grow: 1;
   display: flex;
   justify-content: flex-end;
   max-width: 60%;
+  position: relative;
 }
 .main-navigation #primary-menu {
-  justify-content: space-between;
-  width: 100%;
-}
-
-.burger-btn {
-  display: none;
-}
-
-.btn-close {
-  display: none;
-}
-
-.primary-menu {
-  list-style: none;
+  justify-content: flex-end;
+  width: 50%;
+  height: 100%;
   display: flex;
-  margin: 0 10px;
-  padding: 10px;
+  align-items: center;
+  position: relative;
 }
-.primary-menu li {
-  margin: 0 15px;
+.main-navigation #primary-menu li {
+  margin: 0 30px;
   min-width: fit-content;
 }
-.primary-menu li a {
-  text-decoration: none;
+.main-navigation #primary-menu li a {
   padding: 10px;
   display: block;
 }
-.primary-menu li a:hover, .primary-menu li a:focus {
-  font-weight: 700;
-}
-.primary-menu .toggled {
-  display: block;
-}
 
-div.mobile-menu-container {
-  display: none;
-}
-div.mobile-menu-container button.burger-btn {
-  display: flex;
+/* Burger button styling */
+.burger-btn {
   flex-direction: column;
   justify-content: space-between;
-  align-self: center;
   width: 25px;
   height: 20px;
   background: transparent;
   border: none;
-  padding: 0;
   cursor: pointer;
+  display: none; /* Hidden by default */
 }
-div.mobile-menu-container button.burger-btn span {
+.burger-btn span {
   display: block;
   width: 25px;
   height: 3px;
   background-color: black;
-  justify-content: center;
+  transition: all 0.3s ease;
+}
+.burger-btn.btn-close span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.burger-btn.btn-close span:nth-child(2) {
+  opacity: 0;
+}
+.burger-btn.btn-close span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
 }
 
+/* Mobile menu styling */
+.mobile-menu {
+  display: none;
+  position: fixed;
+  top: 80px;
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 80px);
+  background-color: white;
+  z-index: 1000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+.mobile-menu.open {
+  display: block;
+}
+.mobile-menu ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.mobile-menu ul li {
+  margin: 10px 0;
+}
+.mobile-menu ul li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  display: block;
+}
+.mobile-menu ul li a:hover, .mobile-menu ul li a:focus {
+  font-weight: 700;
+}
+
+/* Footer menu styling */
 .footer-nav {
   width: 100%;
   display: flex;
@@ -338,38 +373,74 @@ div.mobile-menu-container button.burger-btn span {
   font-weight: 700;
 }
 
+/* Responsive styling */
 @media screen and (max-width: 768px) {
-  nav#header-navigation #primary-menu {
+  .main-navigation #primary-menu {
     display: none;
   }
-  div.mobile-menu-container {
-    display: flex !important;
+  .mobile-menu-container {
+    display: flex;
     justify-content: center;
-    position: relative;
-    align-content: center;
-    justify-content: center;
+    align-items: center;
+    margin: 0;
+  }
+  .mobile-menu {
+    position: fixed;
+    width: 100%;
+    margin-top: 40px;
+    background-color: #E00000;
+    height: 90vh;
+  }
+  .mobile-menu.open .menu-menu-principal-container {
+    width: 100%;
+    height: 80%;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    max-width: fit-content;
-  }
-  div.mobile-menu-container button.burger-btn {
-    flex-direction: column;
-    width: 25px;
-    height: 25px;
-    position: relative;
-    cursor: pointer;
-  }
-  .footer-nav {
-    position: relative;
-    flex: 1;
-    max-height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .footer-nav #footer-menu {
+  .mobile-menu.open .primary-menu {
+    display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    height: 50%;
+  }
+  .mobile-menu.open .primary-menu li {
+    margin: 10px 0;
+  }
+  .mobile-menu.open .primary-menu li a {
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+    font-size: 1.5rem;
+    display: block;
+    font-family: Space-Mono, monospace;
+  }
+  .mobile-menu.open .primary-menu li a:hover, .mobile-menu.open .primary-menu li a:focus {
+    font-weight: 700;
+  }
+  .burger-btn {
+    display: flex;
+  }
+  .burger-btn.btn-close span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+  .burger-btn.btn-close span:nth-child(2) {
+    opacity: 0;
+  }
+  .burger-btn.btn-close span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+  }
+  .footer-nav {
+    height: auto;
+  }
+  .footer-nav ul#footer-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-height: 100px;
   }
 }
 ul,
