--- a/motaphoto/sass/components/_nav.scss
+++ b/motaphoto/sass/components/_nav.scss
@@ -1,4 +1,4 @@
-// Variables for easy customization
+/* Navigation styling for the header and footer navbars and menus */
 ul,
 li,
 a {
@@ -6,22 +6,26 @@ a {
     padding: 0;
     list-style: none;
     text-decoration: none;
+    &:hover, &:focus {
+        font-weight: 700;
+    }
 }
 
-// General styling for the header
+/* General styling for the header */
 #masthead {
     height: 80px;
     position: relative;
     width: 100%;
 }
+
 .site-header {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: white;
-}   
-// Logo container styling
+}
+
 .logo-container {
     flex-shrink: 0;
     max-width: 40%;
@@ -33,109 +37,107 @@ a {
     justify-content: center;
 
     .custom-logo-link {
-    height: auto;
-    width: auto;
-    max-width: 200px;
-    display: flex;
-    align-items: center;
+        height: auto;
+        width: auto;
+        max-width: 200px;
+        display: flex;
+        align-items: center;
+
         img {
             width: 100%;
             height: 100%;
         }
     }
 }
-// Navigation container position/width styling
+
+/* Navigation styling */
 .main-navigation {
     flex-grow: 1;
     display: flex;
-    justify-content: flex-end ;
+    justify-content: flex-end;
     max-width: 60%;
+    position: relative;
     #primary-menu {
-        justify-content: space-between;
-        width: 100%;
-    }
-}
+        justify-content: flex-end;
+        width: 50%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
 
-// Burger button styling
-.burger-btn {
-    display: none; // Hidden by default
-}
-
-.btn-close {
-    display: none;
-}
-
-// Main menu styling
-.primary-menu {
-    list-style: none;
-    display: flex;
-    margin: 0 10px;
-    padding: 10px;
-
-    li {
-        margin: 0 15px;
-        min-width: fit-content;
-
-        a {
-            text-decoration: none;
-            padding: 10px;
-            display: block;
-
-            &:hover,
-            &:focus {
-                font-weight: 700;
+        li {
+            margin: 0 30px;
+            min-width: fit-content;
+            a {
+                padding: 10px;
+                display: block;
             }
         }
     }
-    .toggled {
-        display: block;
-    }
 }
 
- // Mobile menu container styling
-div.mobile-menu-container {
-    display: none; // Hidden by default on desktop
-    
-    
-    button.burger-btn {
-        display: flex; // Hidden by default
-        flex-direction: column;
-        justify-content: space-between;
-        align-self: center;
+
+/* Burger button styling */
+.burger-btn {
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 20px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    display: none; /* Hidden by default */
+
+    span {
+        display: block;
         width: 25px;
-        height: 20px;
-        background: transparent;
-        border: none;
-        padding: 0;
-        cursor:pointer;
+        height: 3px;
+        background-color: black;
+        transition: all 0.3s ease;
+    }
 
+    &.btn-close {
         span {
-            display: block;
-            width: 25px;
-            height: 3px;
-            background-color: black;
-            justify-content: center;
-
+            &:nth-child(1) {
+                transform: rotate(45deg) translate(5px, 5px);
+            }
+            &:nth-child(2) {
+                opacity: 0;
+            }
+            &:nth-child(3) {
+                transform: rotate(-45deg) translate(5px, -5px);
+            }
         }
     }
 }
 
-
-////// Footer menu styling 
-.footer-nav {
+/* Mobile menu styling */
+.mobile-menu {
+    display: none;
+    position: fixed;
+    top: 80px;
+    left: 0;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    height: 80px;
+    height: calc(100vh - 80px);
+    background-color: white;
+    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+
+    &.open {
+        display: block;
+    }
 
     ul {
         display: flex;
-        flex-shrink: 1;
-        margin: 0 auto;
-        
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+
         li {
-            margin: 0 15px;
-            min-width: fit-content;
+            margin: 10px 0;
+
             a {
                 text-decoration: none;
                 color: black;
@@ -147,45 +149,123 @@ div.mobile-menu-container {
                     font-weight: 700;
                 }
             }
-        
+        }
+    }
+}
+
+/* Footer menu styling */
+.footer-nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 80px;
+
+    ul {
+        display: flex;
+        flex-shrink: 1;
+        margin: 0 auto;
+
+        li {
+            margin: 0 15px;
+            min-width: fit-content;
+
+            a {
+                text-decoration: none;
+                color: black;
+                padding: 10px;
+                display: block;
+
+                &:hover,
+                &:focus {
+                    font-weight: 700;
+                }
+            }
         }
     }
 }
 
 
-// Responsive styling for mobile view
+/* Responsive styling */
 @media screen and (max-width: 768px) {
-    nav#header-navigation #primary-menu{
+    .main-navigation #primary-menu {
         display: none; // Hide the main menu on mobile
     }
-    div.mobile-menu-container {
-        display: flex !important; // Show the mobile menu container on mobile
+
+    .mobile-menu-container {
+        display: flex; // Show the mobile menu container on mobile
         justify-content: center;
-        position: relative;
-        align-content: center;
-        justify-content: center;
+        align-items: center;
         margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        max-width: fit-content;
-            button.burger-btn {
-            flex-direction: column;
-            width: 25px;
-            height: 25px;
-            position: relative;
-            cursor: pointer;
+    }
+
+    .mobile-menu {
+        position: fixed;
+        width: 100%;
+        margin-top: 40px;
+        background-color:#E00000;
+        height: 90vh;
+        &.open {
+            .menu-menu-principal-container{
+                width: 100%;
+                height: 80%;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .primary-menu {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                height: 50%;
+                
+                li {
+                    margin: 10px 0;
+                    a {
+                        text-decoration: none;
+                        color: white;
+                        padding: 10px;
+                        font-size: 1.5rem;
+                        display: block;
+                        font-family: Space-Mono, monospace;
+                        &:hover,
+                        &:focus {
+                            font-weight: 700;
+                        }
+                    }
+                
+                }
+            }
+        }
+    }
+
+
+    .burger-btn {
+        display: flex; // Show the burger button on mobile
+        &.btn-close {
+            span {
+                &:nth-child(1) {
+                    transform: rotate(45deg) translate(5px, 5px);
+                }
+                &:nth-child(2) {
+                    opacity: 0;
+                }
+                &:nth-child(3) {
+                    transform: rotate(-45deg) translate(5px, -5px);
+                }
+            }
         }
     }
 
     .footer-nav {
-        position: relative;
-        flex: 1;
-        max-height: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        #footer-menu {
+        height: auto;
+        ul#footer-menu {
+            display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            max-height: 100px;
         }
     }
 }
