--- a/motaphoto/sass/layout/_banner.scss
+++ b/motaphoto/sass/layout/_banner.scss
@@ -1,3 +1,4 @@
+// Style for hero header banner image on homepage
 section#hero-header {
     display: block;
     position: relative;
@@ -16,6 +17,16 @@ section#hero-header {
             height: auto;
             max-height: 800px;
             object-fit: cover;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    section#hero-header {
+        .hero-banner {
+            img {
+                max-height: 400px;
+            }
         }
     }
 }
