--- a/motaphoto/sass/layout/_contact.scss
+++ b/motaphoto/sass/layout/_contact.scss
@@ -6,9 +6,8 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    overflow: auto;
 
     .modal-container {
         position: relative;
@@ -58,16 +57,20 @@
 
         >.modal-content {
             padding: 0;
-            height: 80%;
+            height: 90%;
 
             .modal-content__header {
-                margin: 40px 0;
-                display: flex;
-                justify-content: center;
+                margin: 0;
                 width: 100%;
-                height: 20%;
+                height: auto;
                 overflow: hidden;
-                background-image: cover;
+
+                #contact-banner {
+                    width: 100%;
+                    height: auto;
+                    object-fit: cover;
+                    object-position: center;
+                }
             }
 
             .modal-content__form {
@@ -87,22 +90,28 @@
             div.contact-form-entries {
                 text-align: left;
                 label {
+                    display: block;
+                    margin: 20px 0;
                     line-height: 20px;
                     font-size: 14px;
                     font-weight: 500;
+
                 }
                 input.wpcf7-form-control {
                     line-height: 20px;
                     font-size: 14px;
                     height: 40px;
                     width: 100%;
+                    margin-top: 10px;
                 }
                 textarea {
                     width: 100%;
                     height: 200px;
                     font-size: 14px;
                 }
+
             }
+
             div.contact-form-button {
                 display: flex;
                 justify-content: center;
