--- a/motaphoto/sass/layout/_header.scss
+++ b/motaphoto/sass/layout/_header.scss
@@ -4,6 +4,7 @@
     position: relative;
     width: 100%;
     overflow: hidden;
+    margin: 0;
     box-shadow: 0px 14px 14px rgba(0, 0, 0, 0.03);
 }
 
@@ -17,26 +18,30 @@
 }
 
 .logo-container {
-    flex-shrink: 0;
-    max-width: 40%;
-    margin-left: 50px;
-    margin-right: 50px;
+    max-width: 30%;
     height: 80px;
     display: flex;
-    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
-    justify-content: center;
-
+    margin-left: 5%;
+    margin-right: -5%;
     .custom-logo-link {
-        height: auto;
-        width: auto;
-        max-width: 200px;
         display: flex;
+        justify-content: center;
         align-items: center;
+        width: 50%; 
+
+        a {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
         img {
-            width: 100%;
-            height: 100%;
+            max-height: 100%; /* Adjust to control the logo size, maintaining aspect ratio */
+            max-width: 100%; /* Adjust to control the logo size, maintaining aspect ratio */
         }
     }
 }
@@ -107,7 +112,6 @@
                 color: black;
                 padding: 10px;
                 display: block;
-
                 &:hover,
                 &:focus {
                     font-weight: 700;
