--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -555,6 +555,9 @@ img {
 }
 
 @media screen and (max-width: 768px) {
+  #header-navigation {
+    display: none;
+  }
   .mobile-menu-container {
     display: flex;
     justify-content: center;
