--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -759,6 +759,46 @@ section.photo-catalogue > .photo-filters .sorting-options {
   transform: rotate(180deg);
 }
 
+.lightbox-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+}
+.lightbox-modal__container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  height: 80%;
+  transform: translate(-50%, -50%);
+  overflow: contain;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.lightbox-modal__container__header {
+  justify-content: flex-end;
+  height: 30px;
+  width: 100%;
+}
+.lightbox-modal__container__header button {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+}
+.lightbox-modal__container__display {
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-height: 600px;
+}
+
 /**
  * Layout Styles
  *
@@ -1081,72 +1121,90 @@ div.gallery-photos__container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 80%;
-  gap: 20px;
-  flex: 1;
   flex-wrap: wrap;
+  gap: 20px;
   padding: 0;
   margin: 0;
 }
-div.gallery-photos__container article.gallery-photo {
+
+article.gallery-photo {
   flex: 0 1 calc(50% - 20px); /* Flex basis of 50% minus gap, allowing it to grow and shrink */
-  width: 50vw;
-  height: 500px;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
+  height: 500px; /* Adjust height as needed */
+  min-width: 564px;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link {
+
+a.photo__link {
   cursor: pointer;
   display: block;
   width: 100%;
   height: 100%;
+  position: relative;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-container {
+
+div.photo-container {
   width: 100%;
   height: 100%;
+  position: relative;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-container img {
+div.photo-container .attachment-featured-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay {
-  display: none;
-  justify-content: center;
-  align-items: center;
+
+div.photo-overlay {
+  display: none; /* Initially hidden */
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
   background-color: rgba(0, 0, 0, 0.5);
   transition: opacity 0.3s ease-in-out;
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .icon-fullscreen {
+
+.icon-fullscreen, .icon-eye {
   position: absolute;
+  z-index: 2; /* Ensure icons are above overlay */
+  cursor: pointer;
+  width: 40px; /* Adjust size as needed */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.icon-fullscreen {
   top: 10px;
   right: 10px;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .icon-eye {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+
+.icon-eye {
+  top: 50%; /* Center vertically */
+  left: 50%; /* Center horizontally */
   transform: translate(-50%, -50%);
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .photo_reference {
+
+.photo_reference {
   position: absolute;
   bottom: 10px;
   left: 10px;
+  color: white; /* Example text color */
+  z-index: 2; /* Ensure icons are above overlay */
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .photo_category {
+
+.photo_category {
   position: absolute;
   bottom: 10px;
   right: 10px;
+  color: white; /* Example text color */
+  z-index: 2; /* Ensure icons are above overlay */
 }
-div.gallery-photos__container article.gallery-photo a.photo__link:hover div.photo-overlay {
+
+a.photo__link:hover div.photo-overlay {
   display: flex;
   opacity: 1;
 }
@@ -1273,6 +1331,12 @@ div.contact-form-button p input:hover {
   align-items: flex-end;
   width: calc(40% - 20px);
   max-width: 50%;
+}
+#photo-page > div > article img {
+  object-fit: contain;
+  height: auto;
+  width: 100%;
+  height: 100%;
 }
 
 .entry-meta {
