--- a/motaphoto/assets/css/custom.css
+++ b/motaphoto/assets/css/custom.css
@@ -229,6 +229,25 @@ h4, h5 {
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* Fallback for browsers that do not support text-stroke */
 }
 
+.photo-title {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: none;
+  color: white;
+}
+
+.photo-category {
+  font-family: "Space-Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: white;
+  line-height: 21px;
+}
+
 @media (max-width: 1200px) {
   h1 {
     font-size: calc(66px + 2vw);
@@ -1152,7 +1171,8 @@ div.gallery-photos__container article.gallery-photo a.photo__link div.photo-cont
   object-fit: cover;
   object-position: center;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay {
+
+div.photo-overlay {
   display: none;
   justify-content: center;
   align-items: center;
@@ -1162,31 +1182,33 @@ div.gallery-photos__container article.gallery-photo a.photo__link div.photo-over
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
   transition: opacity 0.3s ease-in-out;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .icon-fullscreen {
+div.photo-overlay .icon-fullscreen {
   position: absolute;
   top: 10px;
   right: 10px;
+  height: 40px;
+  width: 40px;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .icon-eye {
+div.photo-overlay .icon-eye {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .photo_reference {
+div.photo-overlay .photo-title {
   position: absolute;
   bottom: 10px;
   left: 10px;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link div.photo-overlay .photo_category {
+div.photo-overlay .photo-category {
   position: absolute;
   bottom: 10px;
   right: 10px;
 }
-div.gallery-photos__container article.gallery-photo a.photo__link:hover div.photo-overlay {
+div.photo-overlay:hover div.photo-overlay {
   display: flex;
   opacity: 1;
 }
