--- a/motaphoto/sass/layout/_photo-gallery.scss
+++ b/motaphoto/sass/layout/_photo-gallery.scss
@@ -33,54 +33,54 @@ div.gallery-photos__container {
                     object-position: center;
                 }
             }
-
-            div.photo-overlay {
-                display: none; // Initially hidden
-                justify-content: center;
-                align-items: center;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                z-index: 2;
-                background-color: rgba(0, 0, 0, 0.5);
-                transition: opacity 0.3s ease-in-out;
-
-                // Fullscreen icon
-                .icon-fullscreen {
-                    position: absolute;
-                    top: 10px;
-                    right: 10px;
-                }
-
-                // Eye icon
-                .icon-eye {
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                }
-
-                // ReferenceID
-                .photo_reference {
-                    position: absolute;
-                    bottom: 10px;
-                    left: 10px;
-                }
-
-                // Category
-                .photo_category {
-                    position: absolute;
-                    bottom: 10px;
-                    right: 10px;
-                }
-            }
-
-            &:hover div.photo-overlay {
-                display: flex;
-                opacity: 1;
-            }
         }
-    }        
-}
+    }
+} 
+div.photo-overlay {
+    display: none; // Initially hidden
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.6);
+    transition: opacity 0.3s ease-in-out;
+
+    // Fullscreen icon
+    .icon-fullscreen {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        height: 40px;
+        width: 40px;
+    }
+
+    // Eye icon
+    .icon-eye {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    // ReferenceID
+    .photo-title{
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+    }
+
+    // Category
+    .photo-category {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+    }
+    &:hover div.photo-overlay {
+        display: flex;
+        opacity: 1;
+    }
+}        
