--- a/motaphoto/sass/layout/_contact.scss
+++ b/motaphoto/sass/layout/_contact.scss
@@ -89,8 +89,22 @@
         form.wpcf7-form {
             max-width: 100%;
             align-items: flex-start;
+            &.invalid {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+                .contact-form-entries {
+                    position: relative;
+                    left: 20%;
+                    top: 0;
+                }
+            }
+
             div.contact-form-entries {
                 text-align: left;
+                
                 label {
                     display: block;
                     margin: 20px 0;
@@ -104,16 +118,28 @@
                     font-size: 14px;
                     height: 40px;
                     width: 100%;
+                    min-width: 100px;
+                    max-width: 362.734px;
                     margin-top: 10px;
+                    &.wpcf7-not-valid {
+                        max-width: 362.734px;
+                    }
                 }
                 textarea {
                     width: 100%;
                     height: 200px;
                     font-size: 14px;
+                    &.wpcf7-not-valid {
+                        max-width: 362.734px;
+                    }
                 }
-
+            
+                span.wpcf7-not-valid-tip {
+                    width:100%;
+                    display: flex;
+                    justify-content: center;
+                }
             }
-
         }
     }
 }
